--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -34,7 +34,11 @@
     "reflect-metadata": "^0.2.2",
     "pdf-lib": "^1.17.1",
     "rxjs": "^7.8.1",
-    "typeorm": "^0.3.20"
+    "typeorm": "^0.3.20",
+    "nestjs-pino": "^4.4.0",
+    "pino": "^9.6.0",
+    "pino-http": "^10.4.0",
+    "pino-pretty": "^13.0.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.4.0",
