--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -40,6 +40,7 @@
     "pino": "^9.6.0",
     "pino-http": "^10.4.0",
     "pino-pretty": "^13.0.0",
+    "@scalar/nestjs-api-reference": "1.0.23",
     "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
