Implement throttling in the API by adding @nestjs/throttler, configuring global throttling settings, and applying throttling to specific routes. Update environment variables for CORS and throttling limits in .env.example. Enhance DTOs with ApiProperty decorators for better Swagger documentation.

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -23,3 +23,9 @@ JWT_EXPIRES_IN=60m
 
 APP_BASE_URL=http://localhost:3000
 
+CORS_ALLOWED_ORIGINS=http://localhost:3000,http://localhost:3001
+
+THROTTLE_TTL_SECONDS=60
+THROTTLE_LIMIT=120
+THROTTLE_PUBLIC_TTL_SECONDS=60
+THROTTLE_PUBLIC_LIMIT=10
