--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -6,7 +6,10 @@
     "build": "nest build",
     "dev": "nest start --watch",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\"",
-    "test": "jest"
+    "test": "jest",
+    "migration:generate": "typeorm-ts-node-commonjs -d apps/api/src/database/data-source.ts migration:generate",
+    "migration:run": "typeorm-ts-node-commonjs -d apps/api/src/database/data-source.ts migration:run",
+    "migration:revert": "typeorm-ts-node-commonjs -d apps/api/src/database/data-source.ts migration:revert"
   },
   "dependencies": {
     "@connexto/database": "workspace:*",
@@ -22,6 +25,7 @@
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.4.0",
     "@nestjs/swagger": "^7.3.0",
+    "@nestjs/throttler": "4.1.0",
     "@nestjs/typeorm": "^10.0.2",
     "@aws-sdk/client-s3": "^3.700.0",
     "@aws-sdk/s3-request-presigner": "^3.700.0",
