Refactor PdfService and S3StorageService tests for improved coverage and error handling
- Enhanced PdfService tests to cover appending evidence pages for content exceeding page height.
- Improved S3StorageService tests to validate custom content type handling, error responses for empty bodies, and default configurations when no credentials or endpoints are specified.

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -12,6 +12,8 @@
     "migration:revert": "typeorm-ts-node-commonjs -d apps/api/src/database/data-source.ts migration:revert"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.700.0",
+    "@aws-sdk/s3-request-presigner": "^3.700.0",
     "@connexto/database": "workspace:*",
     "@connexto/events": "workspace:*",
     "@connexto/shared": "workspace:*",
@@ -27,34 +29,34 @@
     "@nestjs/swagger": "^7.3.0",
     "@nestjs/throttler": "4.1.0",
     "@nestjs/typeorm": "^10.0.2",
-    "@aws-sdk/client-s3": "^3.700.0",
-    "@aws-sdk/s3-request-presigner": "^3.700.0",
+    "@scalar/nestjs-api-reference": "1.0.23",
+    "bcryptjs": "^3.0.3",
     "bull": "^4.12.0",
     "bullmq": "^5.25.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
-    "passport": "^0.7.0",
-    "nodemailer": "^6.9.0",
-    "passport-jwt": "^4.0.1",
-    "reflect-metadata": "^0.2.2",
-    "pdf-lib": "^1.17.1",
-    "rxjs": "^7.8.1",
-    "typeorm": "^0.3.20",
     "nestjs-pino": "^4.4.0",
+    "nodemailer": "^6.9.0",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
+    "pdf-lib": "^1.17.1",
     "pino": "^9.6.0",
     "pino-http": "^10.4.0",
     "pino-pretty": "^13.0.0",
-    "@scalar/nestjs-api-reference": "1.0.23",
-    "swagger-ui-express": "^5.0.1"
+    "reflect-metadata": "^0.2.2",
+    "rxjs": "^7.8.1",
+    "swagger-ui-express": "^5.0.1",
+    "typeorm": "^0.3.20"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.4.0",
     "@nestjs/schematics": "^10.2.0",
     "@nestjs/testing": "^10.4.0",
+    "@types/bcryptjs": "^3.0.0",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
-    "@types/node": "^20.10.0",
     "@types/multer": "^1.4.11",
+    "@types/node": "^20.10.0",
     "@types/nodemailer": "^6.4.14",
     "@types/passport-jwt": "^4.0.1",
     "jest": "^29.7.0",
