Enhance project configuration and testing setup
- Added new scripts for web development and building in package.json.
- Updated pnpm-lock.yaml to include new dependencies for the web application.
- Refined VSCode settings for consistent code formatting and linting across JavaScript and TypeScript files.
- Improved error handling in AuthService and TenantsService for better tenant validation.
- Updated tests in AuthService and UsersService to utilize mocked bcrypt functions for password handling.

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -22,6 +22,17 @@ services:
       minio:
         condition: service_started
 
+  web:
+    image: node:24-alpine
+    working_dir: /app
+    volumes:
+      - ..:/app
+    ports:
+      - '3001:3001'
+    environment:
+      NEXT_PUBLIC_API_URL: http://localhost:3000/digital-signer/v1
+    command: sh -c "corepack enable && pnpm install && pnpm --filter web dev -- --hostname 0.0.0.0 --port 3001"
+
   postgres:
     image: postgres:16-alpine
     environment:
