--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -26,6 +26,7 @@
     "@nestjs/mapped-types": "^2.0.4",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.4.0",
+    "@nestjs/schedule": "^4.1.0",
     "@nestjs/swagger": "^7.3.0",
     "@nestjs/throttler": "4.1.0",
     "@nestjs/typeorm": "^10.0.2",
