Enhance notifications module with email functionality and event handling
- Added SMTP configuration to the environment for email notifications.
- Implemented new event handlers for document completion and tenant creation in the NotificationEventsHandler.
- Updated NotificationsService to support sending emails with text and HTML content.
- Refactored TemplateService to render email templates dynamically based on context and locale.
- Enhanced EmailProcessor to manage email sending via SMTP and log email activities.
- Updated reminder scheduling to include locale support for email notifications.
- Added new event types and payloads for tenant creation events.

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -23,6 +23,11 @@ JWT_EXPIRES_IN=60m
 
 APP_BASE_URL=http://localhost:3000
 
+SMTP_HOST=localhost
+SMTP_PORT=1025
+SMTP_SECURE=false
+SMTP_FROM=noreply@connexto.com
+
 CORS_ALLOWED_ORIGINS=http://localhost:3000,http://localhost:3001
 
 THROTTLE_TTL_SECONDS=60
