--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -14,12 +14,18 @@ services:
       REDIS_HOST: redis
       S3_ENDPOINT: http://minio:9000
       APP_BASE_URL: http://localhost:3000
+      SMTP_HOST: mailpit
+      SMTP_PORT: 1025
+      SMTP_SECURE: 'false'
+      SMTP_FROM: noreply@connexto.com
     depends_on:
       postgres:
         condition: service_healthy
       redis:
         condition: service_started
       minio:
+        condition: service_started
+      mailpit:
         condition: service_started
 
   web:
@@ -65,6 +71,12 @@ services:
       - '9001:9001'
     volumes:
       - minio_data:/data
+
+  mailpit:
+    image: axllent/mailpit:latest
+    ports:
+      - '1025:1025'
+      - '8025:8025'
 
 volumes:
   postgres_data:
