--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -41,5 +41,7 @@
   "eslint.format.enable": true,
   "typescript.preferences.removeUnusedImports": true,
   "typescript.suggest.autoImports": true,
-  "cSpell.enabled": false
+  "cSpell.enabled": false,
+  "npm.exclude": ["**/node_modules/**"],
+  "npm.packageManager": "pnpm"
 }
