Add WEB_BASE_URL configuration and update notification URLs for improved routing
- Introduced WEB_BASE_URL in the environment configuration to support different base URLs for web applications.
- Updated NotificationEventsHandler to utilize WEB_BASE_URL for generating signing and document URLs, enhancing localization support.
- Refactored ReminderSchedulerService and SignaturesService to accommodate locale-specific URLs for signing actions.
- Enhanced email templates and layout to ensure consistent styling and improved user experience across notifications.
- Updated translations in both English and Portuguese to reflect new terms and improve clarity in user-facing messages.

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -22,6 +22,7 @@ JWT_SECRET=change-in-production
 JWT_EXPIRES_IN=60m
 
 APP_BASE_URL=http://localhost:3000
+WEB_BASE_URL=http://localhost:3001
 
 SMTP_HOST=localhost
 SMTP_PORT=1025
