--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -14,6 +14,7 @@ services:
       REDIS_HOST: redis
       S3_ENDPOINT: http://minio:9000
       APP_BASE_URL: http://localhost:3000
+      WEB_BASE_URL: http://localhost:3001
       SMTP_HOST: mailpit
       SMTP_PORT: 1025
       SMTP_SECURE: 'false'
