Add AI module integration and enhance document signing features
- Integrated the '@connexto/ai' package into the project for AI functionalities.
- Updated the API environment configuration to include a new AI API key.
- Enhanced the document signing process by adding a new 'signatureData' field to the audit interface and related components.
- Improved UI components for better user experience, including adjustments to typography and layout in the signing steps.
- Updated Docker configuration to use a specific PostgreSQL image for better compatibility.
- Added new event types for AI-related actions in the events package.

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.700.0",
     "@aws-sdk/s3-request-presigner": "^3.700.0",
+    "@connexto/ai": "workspace:*",
     "@connexto/database": "workspace:*",
     "@connexto/events": "workspace:*",
     "@connexto/shared": "workspace:*",
@@ -39,6 +40,7 @@
     "cookie-parser": "^1.4.7",
     "nestjs-pino": "^4.4.0",
     "nodemailer": "^6.9.0",
+    "openai": "^6.18.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "pdf-lib": "^1.17.1",
