--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -56,6 +56,8 @@
     "@nestjs/cli": "^10.4.0",
     "@nestjs/schematics": "^10.2.0",
     "@nestjs/testing": "^10.4.0",
+    "@swc/cli": "^0.8.0",
+    "@swc/core": "^1.15.11",
     "@types/bcryptjs": "^3.0.0",
     "@types/cookie-parser": "^1.4.10",
     "@types/express": "^4.17.21",
