--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -32,6 +32,9 @@
     "@nestjs/throttler": "4.1.0",
     "@nestjs/typeorm": "^10.0.2",
     "@scalar/nestjs-api-reference": "1.0.23",
+    "@signpdf/placeholder-pdf-lib": "^3.3.0",
+    "@signpdf/signer-p12": "^3.3.0",
+    "@signpdf/signpdf": "^3.3.0",
     "bcryptjs": "^3.0.3",
     "bull": "^4.12.0",
     "bullmq": "^5.25.0",
@@ -39,6 +42,7 @@
     "class-validator": "^0.14.1",
     "cookie-parser": "^1.4.7",
     "nestjs-pino": "^4.4.0",
+    "node-forge": "^1.3.3",
     "nodemailer": "^6.9.0",
     "openai": "^6.18.0",
     "passport": "^0.7.0",
@@ -65,6 +69,7 @@
     "@types/jest": "^29.5.12",
     "@types/multer": "^1.4.11",
     "@types/node": "^20.10.0",
+    "@types/node-forge": "^1.3.14",
     "@types/nodemailer": "^6.4.14",
     "@types/passport-jwt": "^4.0.1",
     "@types/pdf-parse": "^1.1.5",
