Update Dockerfile for improved dependency management and deployment process
- Added .npmrc to the Docker build context for better package management.
- Included packages/ai in the dependencies copy for the API.
- Modified the install command to filter dependencies specifically for the API.
- Updated the build process to deploy the API to a designated directory.
- Changed the runner base image to node:24-alpine for optimized performance.

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -3,23 +3,24 @@ RUN corepack enable && corepack prepare pnpm@9.0.0 --activate
 WORKDIR /app
 
 FROM base AS deps
-COPY package.json pnpm-workspace.yaml pnpm-lock.yaml ./
+COPY package.json pnpm-workspace.yaml pnpm-lock.yaml .npmrc ./
 COPY apps/api/package.json ./apps/api/
 COPY apps/web/package.json ./apps/web/
 COPY packages/shared/package.json ./packages/shared/
 COPY packages/database/package.json ./packages/database/
 COPY packages/events/package.json ./packages/events/
-RUN pnpm install --frozen-lockfile
+COPY packages/ai/package.json ./packages/ai/
+RUN pnpm install --frozen-lockfile --filter api...
 
 FROM base AS builder
 COPY --from=deps /app .
 COPY . .
-RUN pnpm install --frozen-lockfile
 RUN pnpm --filter api --filter shared --filter database --filter events build
+RUN pnpm deploy --filter api --prod /app/deployed
 
-FROM base AS runner
+FROM node:24-alpine AS runner
 ENV NODE_ENV=production
-COPY --from=builder /app .
-EXPOSE 3000
 WORKDIR /app
-CMD ["node", "apps/api/dist/main.js"]
+COPY --from=builder /app/deployed .
+EXPOSE 3000
+CMD ["node", "dist/main.js"]
