--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -14,6 +14,7 @@
     "@hookform/resolvers": "^5.2.2",
     "@tanstack/react-query": "^5.90.20",
     "axios": "^1.13.4",
+    "framer-motion": "^12.34.0",
     "lucide-react": "^0.563.0",
     "next": "^14.2.35",
     "next-intl": "^4.8.2",
