Update License to Proprietary and Set Packages as UNLICENSED
- Replaced the Creative Commons license with a proprietary software license in the LICENSE file.
- Updated package.json files across multiple applications and packages to set the license as "UNLICENSED," indicating proprietary status.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "connexto-digital-signer",
   "private": true,
+  "license": "UNLICENSED",
   "scripts": {
     "docker:build": "cd docker && docker compose build",
     "build": "turbo run build",
