--- a/packages/events/package.json
+++ b/packages/events/package.json
@@ -2,6 +2,7 @@
   "name": "@connexto/events",
   "version": "0.0.1",
   "private": true,
+  "license": "UNLICENSED",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "scripts": {
